updates research topics

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ https://templatemo.com/tm-531-reflux
                                     <span>Representation Learning</span></label>
 <!--                                 <label><input type="radio" data-type="trajectory" name="isotope-filter" />
                                     <span>Trajectory Prediction</span></label> -->
-                                <label><input type="radio" data-type="action" name="isotope-filter" />
+                                <label><input type="radio" data-type="action" checked="" name="isotope-filter" />
                                     <span>Video Understanding</span></label>
 
                        <!--          <label><input type="radio" data-type="adaptation" name="isotope-filter" />
@@ -461,6 +461,13 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
+                                    Jiaqi Sun, Lin Zhang, <b>Guangyi Chen</b>, Kun Zhang, Peng XU, Yujiu Yang,
+                                    <a href="https://arxiv.org/abs/2305.06142">Feature Expansion for Graph Neural Networks</a>,
+                                    <em>International Conference on Machine Learning  (<strong>ICML</strong>)</em>, 2023.
+                                    <a href="https://github.com/sajqavril/Feature-Extension-Graph-Neural-Networks">[Code]</a>
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
                                     <b>Guangyi Chen*</b>, Zhenhao Chen*, Shunxing Fan, Kun Zhang,
                                     <a href="https://chengy12.github.io/files/Bosampler.pdf">Unsupervised Sampling Promoting for Stochastic Human Trajectory Prediction</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023.
@@ -471,7 +478,6 @@ https://templatemo.com/tm-531-reflux
                                     Lingjing Kong, Martin Q. Ma, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
                                     <a href="https://chengy12.github.io/files/mae_cvpr.pdf">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023, <strong style="color: #8c363e;">Highlight</strong>.
-                                    [Code]
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
@@ -506,7 +512,7 @@ https://templatemo.com/tm-531-reflux
                                     Weiran Yao, <strong>Guangyi Chen</strong>, Kun Zhang,
                                     <a href="https://arxiv.org/pdf/2210.13647.pdf">Temporally Disentangled Representation Learning</a>,
                                     <em>Thirty-sixth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2022.
-                                    [Code]
+                                    <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a>
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
