--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            My research interests spans across Computer Vision and Machine Learning. For computer vision, I focus on developing methods to better understand human, which includes person re-identification, trajectory prediction, and action understanding. On the machine learning site, I am interested in causal representation learning and transfer learning.
+                            My research interests spans across Computer Vision and Machine Learning, particularly representation learning, video understaning, and causality.
                         </p>
                         <!-- representation learning, video understaning, and causal reasoning -->
                     </div>
