--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="section-heading">
                     <h2>Research Topics</h2>
                     <div class="line-dec"></div>
-                    <div class="left">
+                    <!-- <div class="left">
                         <p>
                             My research interests spans across Computer Vision and Machine Learning, particularly representation learning, video understaning, and causality.
-                        </p>
-                        <!-- representation learning, video understaning, and causal reasoning -->
-                    </div>
+                        </p>      
+                    </div> -->
+                    <!-- representation learning, video understaning, and causal reasoning -->
                     <div class="row">
                         <div class="isotope-wrapper">
                             <form class="isotope-toolbar">
