--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <p>
                             <li style="margin: 5px;">
-                                <b>Publicity Chairs:</b> for CLeaR 2023.
+                                <b>Publicity Chair:</b> for CLeaR 2023.
                             </li>
                             <li style="margin: 5px;">
                                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
