--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2023-07:</b> 1 paper on visual reasoning is accepted by <a href="https://iccv2023.thecvf.com/">ICCV'2023</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2023-04:</b> 1 paper on graph representation learning is accepted by <a href="https://icml.cc/">ICML'2023</a>.
                             </li>
                             <li style="margin: 5px;">
