--- a/index.html
+++ b/index.html
@@ -257,6 +257,15 @@ https://templatemo.com/tm-531-reflux
                             </form>
                             <div class="isotope-box">
                                 <div class="isotope-item" data-type="action">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2308.08414.pdf', '_blank');">
+                                        <img src="assets/images/bosampler.png" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>Tem-adapter: Adapting Image-Text Pretraining for Video Question Answer</h4>
+                                            <span>We present Tem-Adapter, a method that improves VQA by leveraging image-based knowledge and introducing temporal and semantic aligners.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="isotope-item" data-type="action">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/Bosampler.pdf', '_blank');">
                                         <img src="assets/images/bosampler.png" alt="sq-sample26" />
                                         <figcaption>
@@ -463,6 +472,13 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <p>
                             <ul id="list">
+                                <li style="margin: 5px;">
+                                    <b>Guangyi Chen*</b>, XiaoLiu*, Guangrun Wang, Kun Zhang, Philip H.S. Torr, Xiao-Ping Zhang, Yansong Tang,
+                                    <a href="https://arxiv.org/pdf/2308.08414.pdf">Tem-adapter: Adapting Image-Text Pretraining for Video Question Answer</a>,
+                                    <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019.
+                                    <a href="https://github.com/XLiu443/Tem-adapter">[Code]</a>
+                                    <p></p>
+                                </li>
                                 <li style="margin: 5px;">
                                     Jiaqi Sun, Lin Zhang, <b>Guangyi Chen</b>, Kun Zhang, Peng XU, Yujiu Yang,
                                     <a href="https://arxiv.org/abs/2305.06142">Feature Expansion for Graph Neural Networks</a>,
@@ -1063,10 +1079,10 @@ https://templatemo.com/tm-531-reflux
                                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
                             </li>
                             <li style="margin: 5px;">
-                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR and so on.
+                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI, and so on.
                             </li>
                             <li style="margin: 5px;">
-                                <b>Journal Reviewer:</b> TPAMI, TIP, IJCV, TMM, TCSVT and so on.
+                                <b>Journal Reviewer:</b> TPAMI, TIP, IJCV, TNNLS, TMM, TCSVT, and so on.
                             </li>
                         </p>
                     </div>
