--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ https://templatemo.com/tm-531-reflux
                             <div class="isotope-box">
                                 <div class="isotope-item" data-type="action">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2308.08414.pdf', '_blank');">
-                                        <img src="assets/images/bosampler.png" alt="sq-sample26" />
+                                        <img src="assets/images/tem-adapter.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Tem-adapter: Adapting Image-Text Pretraining for Video Question Answer</h4>
                                             <span>We present Tem-Adapter, a method that improves VQA by leveraging image-based knowledge and introducing temporal and semantic aligners.</span>
@@ -500,7 +500,7 @@ https://templatemo.com/tm-531-reflux
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
-                                    Sheng Zhang, Salman Khan, Zhiqiang Shen, Muzammal Naseer, Guangyi Chen, Fahad Khan, 
+                                    Sheng Zhang, Salman Khan, Zhiqiang Shen, Muzammal Naseer, <b>Guangyi Chen</b>, Fahad Khan, 
                                     <a href="https://arxiv.org/pdf/2212.05590.pdf">PromptCAL: Contrastive Affinity Learning via Auxiliary Prompts for Generalized Novel Category Discovery</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023.
                                     <a href="https://github.com/sheng-eatamath/PromptCAL">[Code]</a>
