--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ https://templatemo.com/tm-531-reflux
                                         <img src="assets/images/tem-adapter.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Tem-adapter: Adapting Image-Text Pretraining for Video Question Answer</h4>
-                                            <span>We present Tem-Adapter, a method that improves VQA by leveraging image-based knowledge and introducing temporal and semantic aligners.</span>
+                                            <span>We present Tem-Adapter, which improves VQA by leveraging image-based knowledge and introducing temporal and semantic aligners.</span>
                                         </figcaption>
                                     </figure>
                                 </div>
