--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ https://templatemo.com/tm-531-reflux
                             <li><a href="#section1">About Me</a></li>
                             <li><a href="#section2">My Research</a></li>
                             <li><a href="#section3">Publications</a></li>
-                            <li><a href="#section4">Teaching</a></li>
-                            <li><a href="#section5">Academic Activities</a></li>
+                            <li><a href="#section4">Honors and Awards</a></li>
+                            <li><a href="#section5">Teaching</a></li>
+                            <li><a href="#section6">Academic Activities</a></li>
                         </ul>
                     </nav>
                     <div class="social-network">
@@ -97,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="news">
                         <p>
+                            <li style="margin: 5px;">
+                                <b>2023-09:</b> 3 paper (1 spotlight) on causal representation learning, domain adaptation, and trajectory prediction are accepted by <a href="https://nips.cc/">NeurIPS'2023</a>.
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2023-07:</b> 1 paper on visual reasoning is accepted by <a href="https://iccv2023.thecvf.com/">ICCV'2023</a>.
                             </li>
@@ -995,7 +999,27 @@ https://templatemo.com/tm-531-reflux
                 </div>
             </div>
         </section> -->
-        <section class="section teaching" data-section="section4">
+        <section class="section awards" data-section="section4">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Honors and Awards</h2>
+                    <div class="line-dec"></div>
+                </div>
+                <div class="left">
+                        <p>
+                            <li style="margin: 5px;"> Jiang Zhen Scholarship, Tsinghua University, 2020</li>
+                            <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7, CVPR, 2020</li>
+                            <li style="margin: 5px;"> Samsung Scholarship，2019</li>
+                            <li style="margin: 5px;"> Academic Excellence Scholarship，Tsinghua University，2015</li>
+                            <li style="margin: 5px;"> Academic Excellence Scholarship，Tsinghua University，2015</li>
+                            <li style="margin: 5px;"> Tsinghua Scholarship，Tsinghua University，2014</li>
+                            <li style="margin: 5px;"> National Encouragement Scholarship，Ministry of Education of P.R. China，2014</li>
+                            <li style="margin: 5px;"> National Encouragement Scholarship，Ministry of Education of P.R. China，2013</li>
+                        </p>
+                    </div>
+            </div>
+        </section>
+        <section class="section teaching" data-section="section5">
             <div class="container">
                 <div class="section-heading">
                     <h2>Teaching</h2>
@@ -1058,18 +1082,18 @@ https://templatemo.com/tm-531-reflux
                 </div>
             </div>
         </section> -->
-        <section class="section services" data-section="section5">
+        <section class="section services" data-section="section6">
             <div class="container">
                 <div class="section-heading">
                     <h2>Academic Activities</h2>
                     <div class="line-dec"></div>
-                    <h3>Competitions</h3>
+                    <!-- <h3>Competitions</h3>
                     <div class="left">
                         <p>
                             <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7 (CVPR 2020)</li>
                         </p>
                     </div>
-                    <h3>Academic Services</h3>
+                    <h3>Academic Services</h3> -->
                     <div class="left">
                         <p>
                             <li style="margin: 5px;">
