--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-531-reflux
                             <li><a href="#section3">Publications</a></li>
                             <li><a href="#section4">Honors and Awards</a></li>
                             <li><a href="#section5">Teaching</a></li>
-                            <li><a href="#section6">Academic Activities</a></li>
+                            <li><a href="#section6">Academic Services</a></li>
                         </ul>
                     </nav>
                     <div class="social-network">
@@ -1009,12 +1009,12 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <li style="margin: 5px;"> Jiang Zhen Scholarship, Tsinghua University, 2020</li>
                             <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7, CVPR, 2020</li>
-                            <li style="margin: 5px;"> Samsung Scholarship，2019</li>
-                            <li style="margin: 5px;"> Academic Excellence Scholarship，Tsinghua University，2015</li>
-                            <li style="margin: 5px;"> Academic Excellence Scholarship，Tsinghua University，2015</li>
-                            <li style="margin: 5px;"> Tsinghua Scholarship，Tsinghua University，2014</li>
-                            <li style="margin: 5px;"> National Encouragement Scholarship，Ministry of Education of P.R. China，2014</li>
-                            <li style="margin: 5px;"> National Encouragement Scholarship，Ministry of Education of P.R. China，2013</li>
+                            <li style="margin: 5px;"> Samsung Scholarship, 2019</li>
+                            <li style="margin: 5px;"> Academic Excellence Scholarship, Tsinghua University, 2015</li>
+                            <li style="margin: 5px;"> Academic Excellence Scholarship, Tsinghua University, 2015</li>
+                            <li style="margin: 5px;"> Tsinghua Scholarship, Tsinghua University, 2014</li>
+                            <li style="margin: 5px;"> National Encouragement Scholarship, Ministry of Education of P.R. China, 2014</li>
+                            <li style="margin: 5px;"> National Encouragement Scholarship, Ministry of Education of P.R. China, 2013</li>
                         </p>
                     </div>
             </div>
@@ -1085,7 +1085,7 @@ https://templatemo.com/tm-531-reflux
         <section class="section services" data-section="section6">
             <div class="container">
                 <div class="section-heading">
-                    <h2>Academic Activities</h2>
+                    <h2>Academic Services</h2>
                     <div class="line-dec"></div>
                     <!-- <h3>Competitions</h3>
                     <div class="left">
