--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
-                                <b>2023-09:</b> 3 paper (1 spotlight) on causal representation learning, domain adaptation, and trajectory prediction are accepted by <a href="https://nips.cc/">NeurIPS'2023</a>.
+                                <b>2023-09:</b> 3 paper (1 <strong>Spotlight</strong>) on causal representation learning, domain adaptation, and trajectory prediction are accepted by <a href="https://nips.cc/">NeurIPS'2023</a>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2023-07:</b> 1 paper on visual reasoning is accepted by <a href="https://iccv2023.thecvf.com/">ICCV'2023</a>.
@@ -132,7 +132,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>2022-04:</b> 2 paper on video understanding are accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2022-03:</b> 3 paper (including 1 <strong>oral</strong>) are accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
+                                <b>2022-03:</b> 3 paper (including 1 <strong>Oral</strong>) are accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2021-11:</b> Our python package for causal discovery <a href="https://causal-learn.readthedocs.io/en/latest/">causal-learn</a> is released. Any feedback is welcome.
