--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7, CVPR, 2020</li>
                             <li style="margin: 5px;"> Samsung Scholarship, 2019</li>
                             <li style="margin: 5px;"> Academic Excellence Scholarship, Tsinghua University, 2015</li>
-                            <li style="margin: 5px;"> Academic Excellence Scholarship, Tsinghua University, 2015</li>
+                            <!-- <li style="margin: 5px;"> Academic Excellence Scholarship, Tsinghua University, 2015</li> -->
                             <li style="margin: 5px;"> Tsinghua Scholarship, Tsinghua University, 2014</li>
                             <li style="margin: 5px;"> National Encouragement Scholarship, Ministry of Education of P.R. China, 2014</li>
                             <li style="margin: 5px;"> National Encouragement Scholarship, Ministry of Education of P.R. China, 2013</li>
