--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on representation learning, video understaning, and causal reasoning.
+                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on representation learning, video understanding, and causal reasoning.
                         </p>
                         <p>
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
@@ -477,9 +477,30 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
+                                    Rongqing Li, Changsheng Li, Dongchun Ren, <strong>Guangyi Chen</strong>, Ye Yuan, Guoren Wang, 
+                                    <a href="https://openreview.net/pdf?id=FOFJmR1oxt">BCDiff: Bidirectional Consistent Diffusion for Instantaneous Trajectory Prediction</a>,
+                                    <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023.
+                                    <!-- <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a> -->
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
+                                    Zijian Li, Ruichu Cai, <strong>Guangyi Chen</strong>, Boyang Sun, Zhifeng Hao, Kun Zhang, 
+                                    <a href="https://arxiv.org/pdf/2310.04723.pdf">Subspace Identification for Multi-Source Domain Adaptation</a>,
+                                    <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023.
+                                    <!-- <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a> -->
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
+                                    Xiangchen Song, Weiran Yao, Yewen Fan, Xinshuai Dong, <strong>Guangyi Chen</strong>, Juan Carlos Niebles, Eric Xing, Kun Zhang, 
+                                    <a href="https://arxiv.org/pdf/2310.18615.pdf">Temporally Disentangled Representation Learning under Unknown Nonstationarity</a>,
+                                    <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023.
+                                    <!-- <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a> -->
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
                                     <b>Guangyi Chen*</b>, XiaoLiu*, Guangrun Wang, Kun Zhang, Philip H.S. Torr, Xiao-Ping Zhang, Yansong Tang,
                                     <a href="https://arxiv.org/pdf/2308.08414.pdf">Tem-adapter: Adapting Image-Text Pretraining for Video Question Answer</a>,
-                                    <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019.
+                                    <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2023.
                                     <a href="https://github.com/XLiu443/Tem-adapter">[Code]</a>
                                     <p></p>
                                 </li>
