--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ https://templatemo.com/tm-531-reflux
                                 <li style="margin: 5px;">
                                     Zijian Li, Ruichu Cai, <strong>Guangyi Chen</strong>, Boyang Sun, Zhifeng Hao, Kun Zhang, 
                                     <a href="https://arxiv.org/pdf/2310.04723.pdf">Subspace Identification for Multi-Source Domain Adaptation</a>,
-                                    <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023.
+                                    <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023, <strong style="color: #8c363e;">Spotlight</strong>.
                                     <!-- <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a> -->
                                     <p></p>
                                 </li>
