--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2023-12:</b> 1 paper on prompt learning is accepted by <a href="https://aaai.org/aaai-conference/">AAAI'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2023-09:</b> 3 paper (1 <strong>Spotlight</strong>) on causal representation learning, domain adaptation, and trajectory prediction are accepted by <a href="https://nips.cc/">NeurIPS'2023</a>.
                             </li>
                             <li style="margin: 5px;">
