--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
-                                <b>2023-12:</b> 1 paper on prompt learning is accepted by <a href="https://aaai.org/aaai-conference/">AAAI'2024</a>.
+                                <b>2024-01:</b> 3 papers on visaul reasonsing and causality are accepted by <a href="https://iclr.cc/">ICLR'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2024-01:</b> 1 paper on graph representation learning is accepted by <a href="https://www2024.thewebconf.org/">WWW'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2023-12:</b> 1 paper on prompt learning is accepted by <a href="https://aaai.org/aaai-conference/">AAAI'2024</a> as <strong>Oral</strong>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2023-09:</b> 3 paper (1 <strong>Spotlight</strong>) on causal representation learning, domain adaptation, and trajectory prediction are accepted by <a href="https://nips.cc/">NeurIPS'2023</a>.
@@ -480,10 +486,37 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
+                                    <strong>Guangyi Chen</strong>*, Yuke Li*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
+                                    <a href="https://openreview.net/pdf?id=Cu5wJa5LGO"> LLCP: Learning Latent Causal Processes for Reasoning-based Video Question Answer</a>,
+                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <a href="https://github.com/CHENGY12/LLCP">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Songyao Jin, Feng Xie, <strong>Guangyi Chen</strong>, Biwei Huang, Zhengming Chen, Xinshuai Dong, Kun Zhang, 
+                                    <a href="https://openreview.net/pdf?id=nHkMm0ywWm"> Structural Estimation of Partially Observed Linear Non-Gaussian Acyclic Model: A Practical Approach with Identifiability</a>,
+                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <a href="https://openreview.net/attachment?id=nHkMm0ywWm&name=supplementary_material">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Longkang Li, Ignavier Ng, Gongxu Luo, Biwei Huang, <strong>Guangyi Chen</strong>, Tongliang Liu, Bin Gu, Kun Zhang, 
+                                    <a href="https://openreview.net/pdf?id=m7tJxajC3G"> Federated Causal Discovery from Heterogeneous Data</a>,
+                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <a href="https://github.com/lokali/FedCDH">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Sheng Zhang, Muzammal Naseer, <strong>Guangyi Chen</strong>, Zhiqiang Shen, Salman Khan, Kun Zhang, Fahad Khan, 
+                                    <a href="https://arxiv.org/pdf/2308.12960.pdf">Towards Realistic Zero-Shot Classification via Self Structural Semantic Alignment </a>,
+                                    <em>Thirty-Eighth AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</em>, 2024, <strong style="color: #8c363e;">Oral</strong>.
+                                    <a href="https://github.com/sheng-eatamath/S3A">[Code]</a>
+                                </li>
+                                <li style="margin: 5px;">
                                     Zijian Li, Ruichu Cai, <strong>Guangyi Chen</strong>, Boyang Sun, Zhifeng Hao, Kun Zhang, 
                                     <a href="https://arxiv.org/pdf/2310.04723.pdf">Subspace Identification for Multi-Source Domain Adaptation</a>,
                                     <em>Thirty-seventh Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023, <strong style="color: #8c363e;">Spotlight</strong>.
-                                    <!-- <a href="https://www.catalyzex.com/paper/arxiv:2210.13647/code">[Code]</a> -->
+                                    <a href="https://github.com/jozerozero/Subspace_Identification">[Code]</a>
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
