--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2024-02:</b> 1 paper on video understanding is accepted by <a href="https://cvpr.thecvf.com/">CVPR'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-01:</b> 3 papers on visaul reasonsing and causality are accepted by <a href="https://iclr.cc/">ICLR'2024</a>.
                             </li>
                             <li style="margin: 5px;">
