--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ https://templatemo.com/tm-531-reflux
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
-                                    Lingjing Kong, Martin Q. Ma, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
+                                    Lingjing Kong*, Martin Q. Ma*, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
                                     <a href="https://chengy12.github.io/files/mae_cvpr.pdf">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023, <strong style="color: #8c363e;">Highlight</strong>.
                                     <p></p>
