--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,16 @@ https://templatemo.com/tm-531-reflux
             </div>
         </section>
     </div>
+
+    <div id="clustrmaps-widget" style="text-align:center;">
+    <!-- ClustrMaps Globe -->
+    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI"></script>
+    <!-- Placeholder for ClustrMaps Counter (update this if you have a specific script for the counter) -->
+    <div id="clustrmaps-counter" style="text-align:center;">
+        <!-- The counter script from ClustrMaps would go here -->
+    </div>
+    </div>
+
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
