--- a/index.html
+++ b/index.html
@@ -1178,11 +1178,7 @@ https://templatemo.com/tm-531-reflux
 
     <div id="clustrmaps-widget" style="text-align:center;">
     <!-- ClustrMaps Globe -->
-    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI"></script>
-    <!-- Placeholder for ClustrMaps Counter (update this if you have a specific script for the counter) -->
-    <div id="clustrmaps-counter" style="text-align:center;">
-        <!-- The counter script from ClustrMaps would go here -->
-    </div>
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI&co=475056&cmo=cb3737&cmn=3a5ccc'></script>
     </div>
 
     <!-- Scripts -->
