--- a/index.html
+++ b/index.html
@@ -1171,15 +1171,17 @@ https://templatemo.com/tm-531-reflux
                             </li>
                         </p>
                     </div>
+
+                    <div id="clustrmaps-widget" style="width: 5%;">
+                        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI&co=1c2226&cmo=ad2d2d&cmn=3a76cc'></script>
+                    </div>
+
                 </div>
             </div>
         </section>
     </div>
 
-    <div id="clustrmaps-widget" style="text-align:center;">
-    <!-- ClustrMaps Globe -->
-    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI&co=475056&cmo=cb3737&cmn=3a5ccc'></script>
-    </div>
+
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
