--- a/index.html
+++ b/index.html
@@ -1172,9 +1172,11 @@ https://templatemo.com/tm-531-reflux
                         </p>
                     </div>
 
-                    <div id="clustrmaps-widget" style="width: 5%;">
+                    <p><center>
+                    <div id="clustrmaps-widget" style="width: 10%;">
                         <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI&co=1c2226&cmo=ad2d2d&cmn=3a76cc'></script>
                     </div>
+                    </center></p>
 
                 </div>
             </div>
