--- a/index.html
+++ b/index.html
@@ -1176,11 +1176,13 @@ https://templatemo.com/tm-531-reflux
             </div>
 
         </section>
-                 <p><center>
+        <section class="section services" data-section="sectionxxx">
+                <p><center>
                     <div id="clustrmaps-widget" style="width: 10%;">
                         <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=c1Aa0NlYq_4nd3vAMMpqm5eYGS2vsxlD2WtE0xHe9RI&co=565656&cmo=8d363f&cmn=3a76cc"></script>
                     </div>
-                    </center></p>
+                </center></p>
+        </section>
     </div>
 
 
